@@ -11,7 +11,7 @@ UnitTest.asynctest('browser.tinymce.plugins.link.RemoveLinkTest', (success, fail
   LinkPlugin();
   SilverTheme();
 
-  TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
+  TinyLoader.setupLight((editor, onSuccess, onFailure) => {
     const tinyApis = TinyApis(editor);
     const tinyUi = TinyUi(editor);
     const doc = TinyDom.fromDom(document);
@@ -44,6 +44,13 @@ UnitTest.asynctest('browser.tinymce.plugins.link.RemoveLinkTest', (success, fail
         ]),
         tinyUi.sClickOnUi('Click unlink', 'div[title="Remove link"]'),
         Assertions.sAssertPresence('Assert entire link removed', { 'a[href="http://tiny.cloud"]': 0 }, body)
+      ]),
+      Log.stepsAsStep('TINY-4867', 'Removing multiple links in the selection', [
+        tinyApis.sSetContent('<p><a href="http://tiny.cloud">tiny</a> content <a href="http://tiny.cloud">link</a> with <a href="http://tiny.cloud">other</a></p>'),
+        tinyApis.sSetSelection([ 0, 0, 0 ], 1, [ 0, 4, 0 ], 2),
+        tinyUi.sClickOnToolbar('Click unlink', 'button[title="Remove link"]'),
+        Assertions.sAssertPresence('Assert entire link removed', { a: 0 }, body),
+        tinyApis.sAssertSelection([ 0, 0 ], 1, [ 0, 4 ], 2)
       ])
     ], onSuccess, onFailure);
   }, {
